Fixed Batting Stats and Arb Data merge

--- a/mlb-stats-prep.ipynb
+++ b/mlb-stats-prep.ipynb
@@ -42,38 +42,38 @@
     }
    ],
    "source": [
-    "mlb_stats = pd.read_csv('./data/mlb-stats-bat-2005-2023.csv')\n",
-    "split_names = mlb_stats['PlayerNameRoute'].str.split(' ', n=1, expand=True)\n",
-    "mlb_stats[['first_name', 'last_name']]  = split_names\n",
+    "mlb_bat_stats = pd.read_csv('./data/mlb-stats-bat-2005-2023.csv')\n",
+    "split_names = mlb_bat_stats['PlayerNameRoute'].str.split(' ', n=1, expand=True)\n",
+    "mlb_bat_stats[['first_name', 'last_name']]  = split_names\n",
     "\n",
     "# REMOVE PLAYERS WITH THE SAME NAME\n",
     "# Specify columns for checking duplicates\n",
     "columns_to_check = ['PlayerNameRoute', 'Season']\n",
     "\n",
     "# Drop duplicates based on the specified columns\n",
-    "mlb_stats = mlb_stats.drop_duplicates(subset=columns_to_check)\n",
+    "mlb_bat_stats = mlb_bat_stats.drop_duplicates(subset=columns_to_check)\n",
     "\n",
     "# Arbitration Hearing in 2024 is based on 2023 stats\n",
-    "mlb_stats['Season'] = mlb_stats['Season']\n",
+    "mlb_bat_stats['Season'] = mlb_bat_stats['Season']\n",
     "\n",
     "\n",
     "\n",
     "\n",
-    "columns_to_keep = ['PlayerNameRoute', 'first_name', 'last_name', 'Season', 'Age', 'G', 'PA', 'AB', 'R', 'H', '2B', '3B', 'HR', 'RBI', 'SB', 'CS', 'BB', 'SO', 'AVG', 'OBP', 'SLG', 'OPS', 'GDP', 'HBP', 'SH', 'SF', 'IBB', 'WAR', 'Defense', 'xMLBAMID']\n",
-    "mlb_stats = mlb_stats[columns_to_keep]\n",
-    "mlb_stats['TB'] = (mlb_stats['H'] - mlb_stats['2B'] - mlb_stats['3B'] -  mlb_stats['HR']) + (mlb_stats['2B'] * 2) + (mlb_stats['3B'] * 3) + (mlb_stats['HR'] * 4)\n",
+    "columns_to_keep = ['PlayerNameRoute', 'first_name', 'last_name', 'Season', 'Age', 'G', 'PA', 'AB', 'R', 'H', '2B', '3B', 'HR', 'RBI', 'SB', 'CS', 'BB', 'SO', 'AVG', 'OBP', 'SLG', 'OPS', 'GDP', 'HBP', 'SH', 'SF', 'IBB', 'WAR', 'Defense', 'xMLBAMID', 'Position']\n",
+    "mlb_bat_stats = mlb_bat_stats[columns_to_keep]\n",
+    "mlb_bat_stats['TB'] = (mlb_bat_stats['H'] - mlb_bat_stats['2B'] - mlb_bat_stats['3B'] -  mlb_bat_stats['HR']) + (mlb_bat_stats['2B'] * 2) + (mlb_bat_stats['3B'] * 3) + (mlb_bat_stats['HR'] * 4)\n",
     "# mlb_stats.head()\n",
     "columns_to_cumsum = ['G', 'PA', 'AB', 'R', 'H', '2B', '3B', 'HR', 'RBI', 'SB', 'CS', 'BB', 'SO', 'TB', 'GDP', 'HBP', 'SH', 'SF', 'IBB', 'WAR']\n",
     "\n",
     "# Sort the DataFrame by 'year' within each group\n",
-    "mlb_stats.sort_values(['xMLBAMID', 'Season'], inplace=True)\n",
+    "mlb_bat_stats.sort_values(['xMLBAMID', 'Season'], inplace=True)\n",
     "\n",
     "# Calculate the cumulative sum for the specified columns grouped by 'first_name', 'last_name'\n",
-    "mlb_stats[[f'cum_sum_{col}' for col in columns_to_cumsum]] = mlb_stats.groupby(['xMLBAMID'])[columns_to_cumsum].cumsum()\n",
+    "mlb_bat_stats[[f'cum_sum_{col}' for col in columns_to_cumsum]] = mlb_bat_stats.groupby(['xMLBAMID'])[columns_to_cumsum].cumsum()\n",
     "\n",
-    "mlb_stats.to_csv('./data/mlb-stats-bat_cleaned.csv', index=False)\n",
+    "mlb_bat_stats.to_csv('./data/mlb-stats-bat_cleaned.csv', index=False)\n",
     "\n",
-    "mlb_stats"
+    "mlb_bat_stats"
    ],
    "metadata": {
     "collapsed": false,
@@ -99,7 +99,7 @@
     }
    ],
    "source": [
-    "mlb_stats[mlb_stats['PlayerNameRoute'] == 'Mike Trout']"
+    "mlb_bat_stats[mlb_bat_stats['PlayerNameRoute'] == 'Mike Trout']"
    ],
    "metadata": {
     "collapsed": false,
@@ -489,7 +489,7 @@
     }
    ],
    "source": [
-    "[print(x) for x in mlb_stats.columns]\n"
+    "[print(x) for x in mlb_bat_stats.columns]\n"
    ],
    "metadata": {
     "collapsed": false,
